substrate/frame/support/test/tests/runtime_ui/missing_pallet_index.stderr
error: Invalid pallet declaration, expected a #[frame::pallet_index]
  --> tests/runtime_ui/missing_pallet_index.rs:26:9
   |
26 |         System: frame_system
   |         ^^^^^^
